Improvements and refactorings on Response object